--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,6 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": false
 }
